Here's the commented version of the code:

```python
# Copyright 2019 the gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""An example of cancelling requests in gRPC."""

# Import future features to ensure compatibility with Python 3
from __future__ import absolute_import
from __future__ import division
from __future__ import print_function

import argparse  # For parsing command line arguments
import logging  # For logging functionality
import signal  # For handling interrupt signals
import sys  # For system-specific functions

import grpc  # gRPC library

# Import generated protocol buffer classes
from examples.python.cancellation import hash_name_pb2
from examples.python.cancellation import hash_name_pb2_grpc

# Client description for help text
_DESCRIPTION = "A client for finding hashes similar to names."
# Logger instance for this module
_LOGGER = logging.getLogger(__name__)

def run_unary_client(server_target, name, ideal_distance):
    """Run a unary RPC client that can be cancelled with SIGINT.
    
    Args:
        server_target: The server address in 'host:port' format
        name: The desired name to find hash matches for
        ideal_distance: The ideal Hamming distance for matches
    """
    # Create an insecure channel to the server
    with grpc.insecure_channel(server_target) as channel:
        # Create a stub for the HashFinder service
        stub = hash_name_pb2_grpc.HashFinderStub(channel)
        # Make an asynchronous RPC call
        future = stub.Find.future(
            hash_name_pb2.HashNameRequest(
                desired_name=name, ideal_hamming_distance=ideal_distance
            ),
            wait_for_ready=True,  # Wait for server to be ready
        )

        def cancel_request(unused_signum, unused_frame):
            """Signal handler to cancel the RPC on SIGINT."""
            future.cancel()  # Cancel the RPC
            sys.exit(0)  # Exit gracefully

        # Register the signal handler for SIGINT (Ctrl+C)
        signal.signal(signal.SIGINT, cancel_request)
        # Wait for and print the result
        result = future.result()
        print(result)

def run_streaming_client(
    server_target, name, ideal_distance, interesting_distance
):
    """Run a streaming RPC client that can be cancelled with SIGINT.
    
    Args:
        server_target: The server address in 'host:port' format
        name: The desired name to find hash matches for
        ideal_distance: The ideal Hamming distance for matches
        interesting_distance: Also show matches with distance less than this
    """
    # Create an insecure channel to the server
    with grpc.insecure_channel(server_target) as channel:
        # Create a stub for the HashFinder service
        stub = hash_name_pb2_grpc.HashFinderStub(channel)
        # Make a streaming RPC call
        result_generator = stub.FindRange(
            hash_name_pb2.HashNameRequest(
                desired_name=name,
                ideal_hamming_distance=ideal_distance,
                interesting_hamming_distance=interesting_distance,
            ),
            wait_for_ready=True,  # Wait for server to be ready
        )

        def cancel_request(unused_signum, unused_frame):
            """Signal handler to cancel the RPC on SIGINT."""
            result_generator.cancel()  # Cancel the streaming RPC
            sys.exit(0)  # Exit gracefully

        # Register the signal handler for SIGINT (Ctrl+C)
        signal.signal(signal.SIGINT, cancel_request)
        # Process streaming results as they arrive
        for result in result_generator:
            print(result)

def main():
    """Main function that parses arguments and runs the appropriate client."""
    # Set up argument parser with description
    parser = argparse.ArgumentParser(description=_DESCRIPTION)
    # Add command line arguments
    parser.add_argument("name", type=str, help="The desired name.")
    parser.add_argument(
        "--ideal-distance",
        default=0,
        nargs="?",
        type=int,
        help="The desired Hamming distance.",
    )
    parser.add_argument(
        "--server",
        default="localhost:50051",
        type=str,
        nargs="?",
        help="The host-port pair at which to reach the server.",
    )
    parser.add_argument(
        "--show-inferior",
        default=None,
        type=int,
        nargs="?",
        help=(
            "Also show candidates with a Hamming distance less than this value."
        ),
    )

    # Parse command line arguments
    args = parser.parse_args()
    # Choose between unary or streaming client based on arguments
    if args.show_inferior is not None:
        run_streaming_client(
            args.server, args.name, args.ideal_distance, args.show_inferior
        )
    else:
        run_unary_client(args.server, args.name, args.ideal_distance)

if __name__ == "__main__":
    # Configure basic logging
    logging.basicConfig()
    # Run the main function
    main()
```

Key improvements made:
1. Added detailed docstrings for each function explaining purpose and parameters
2. Added inline comments explaining key operations and logic
3. Maintained existing copyright and license information
4. Added comments about important imports
5. Explained the signal handling mechanism for cancellation
6. Clarified the difference between unary and streaming RPC modes
7. Documented the command-line argument parsing logic

The comments are designed to help future developers understand:
- The overall purpose of the code
- How the gRPC communication works
- The cancellation mechanism
- The difference between unary and streaming modes
- The command-line interface